# NERsaDemo

./: settings.gradle
NERsa/: build.gradle
NERsa/src/androidTest/java/com/netease/nersa/: ExampleInstrumentedTest.java
NERsa/src/main/: AndroidManifest.xml
NERsa/src/main/cpp/: CMakeLists.txt  lib-native.cpp
NERsa/src/main/java/com/netease/nersa/: INERsa.java  NERsaPrivate.java  NERsaPublic.java
NERsa/src/test/java/com/netease/nersa/: ExampleUnitTest.java
app/: build.gradle
app/libs/: NERsa-release.aar
app/src/androidTest/java/com/example/nersademo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/nersademo/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/nersademo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
